--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SearchPhotoApp"
         mc:Ignorable="d" Loaded="Window_Loaded"
-        Title="MainWindow" Height="450" Width="800"  Background="#FFD1D1D1" >
+        Title="PhotoSearchEngine" Height="450" Width="800"  Background="#3a3c40" >
     <Window.Resources>
 
         <Style x:Key="placeHolderSearchBox" TargetType="{x:Type TextBox}">
@@ -16,6 +16,7 @@
             <Setter Property="BorderBrush" Value="#000"/>
             <Setter Property="FontFamily" Value="Roboto"/>
             <Setter Property="FontSize" Value="14"/>
+            <Setter Property="Background" Value="#ffffff"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type TextBox}">
@@ -32,7 +33,7 @@
                                         <Setter Property="Foreground" Value="Transparent"/>
                                         <Style.Triggers>
                                             <DataTrigger Binding="{Binding Path=Text, Source={x:Reference TextSource}}" Value="">
-                                                <Setter Property="Foreground" Value="Gray"/>
+                                                <Setter Property="Foreground" Value="#3a3c40"/>
                                                 <Setter Property="FontFamily" Value="Roboto Italic"/>
                                                 <Setter Property="HorizontalContentAlignment" Value="Left"/>
                                                 <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -46,7 +47,7 @@
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
-                
+
             </Setter>
 
         </Style>
@@ -54,22 +55,33 @@
 
     </Window.Resources>
     <Grid >
-        <StackPanel>
-
-            <TextBox Tag="Search" Style="{DynamicResource placeHolderSearchBox}" Name="text"/>
-            <Button Width="30" Height="30" Name="searchBtn" Click="searchBtn_Click" RenderTransformOrigin="3.6,0.6" HorizontalAlignment="Right" VerticalAlignment="Top">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="763*"/>
+            <ColumnDefinition Width="29*"/>
+        </Grid.ColumnDefinitions>
+        <StackPanel Grid.ColumnSpan="2">
+            <TextBox Tag="Search" Style="{DynamicResource placeHolderSearchBox}" x:Name="text" Margin="146,5"/>
+            <Button Width="30" Height="30" x:Name="searchBtn" Click="searchBtn_Click" RenderTransformOrigin="3.6,0.6" HorizontalAlignment="Right" VerticalAlignment="Top">
                 <Image Source="https://img.icons8.com/android/24/000000/search.png"/>
             </Button>
         </StackPanel>
-
-        
-        <Image x:Name="photoImage1"  Height="100" Width="100" HorizontalAlignment="Left" Margin="0,160,0,159" Grid.Row="1" Grid.Column="1" VerticalAlignment="Top" Source="https://i.ytimg.com/vi/YCaGYUIfdy4/maxresdefault.jpg"/>
-        <Image Grid.Row="1" x:Name="photoImage2" Height="100" Width="100" HorizontalAlignment="Left" Margin="55,0,0,0" Source="https://i.ytimg.com/vi/YCaGYUIfdy4/maxresdefault.jpg"/>
-        <Image Grid.Row="1" x:Name="photoImage3" HorizontalAlignment="Left" Margin="110,0,0,0" Width="100" Height="100" Source="https://i.ytimg.com/vi/YCaGYUIfdy4/maxresdefault.jpg"/>
-        <Image Grid.Row="1" x:Name="photoImage4" Margin="265,0,0,0" HorizontalAlignment="Left" Width="100" Height="100" Source="https://i.ytimg.com/vi/YCaGYUIfdy4/maxresdefault.jpg"/>
-        <Image Grid.Row="2" x:Name="photoImage5" Width="100" Height="100" Source="https://i.ytimg.com/vi/YCaGYUIfdy4/maxresdefault.jpg"/>
-        <Image Grid.Row="2" x:Name="photoImage6" Width="100" Height="100" Margin="300,0,0,0" Source="https://i.ytimg.com/vi/YCaGYUIfdy4/maxresdefault.jpg"/>
-        <Image Grid.Row="2" x:Name="photoImage7" Width="100" Height="100" Margin="350,0,0,0" Source="https://i.ytimg.com/vi/YCaGYUIfdy4/maxresdefault.jpg"/>
-        <Image Grid.Row="2" x:Name="photoImage8" Width="100" Height="100" Margin="400,0,0,0" Source="https://i.ytimg.com/vi/YCaGYUIfdy4/maxresdefault.jpg"/>
+        <Grid Margin="10,40,10,10" >
+            <ListBox x:Name="ListBox1" Background="Transparent" >
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Vertical">
+                        <Image Source="{Binding imagePath}" Width="200" Height="200"></Image>
+                            
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+                <ListBox.ItemsPanel>
+                    <ItemsPanelTemplate >
+                        <UniformGrid Margin="0" IsItemsHost="True"></UniformGrid>
+                    </ItemsPanelTemplate>
+                </ListBox.ItemsPanel>
+            </ListBox>
+            
+        </Grid>
     </Grid>
 </Window>
