--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,82 +6,96 @@
         xmlns:local="clr-namespace:SearchPhotoApp"
         mc:Ignorable="d" Loaded="Window_Loaded"
         Title="PhotoSearchEngine" Height="450" Width="800"  Background="#3a3c40" >
-    <Window.Resources>
+   
+        <Window.Resources>
 
-        <Style x:Key="placeHolderSearchBox" TargetType="{x:Type TextBox}">
-            <Setter Property="SnapsToDevicePixels" Value="True"/>
-            <Setter Property="OverridesDefaultStyle" Value="True"/>
-            <Setter Property="Width" Value="500"/>
-            <Setter Property="Height" Value="30"/>
-            <Setter Property="BorderBrush" Value="#000"/>
-            <Setter Property="FontFamily" Value="Roboto"/>
-            <Setter Property="FontSize" Value="14"/>
-            <Setter Property="Background" Value="#ffffff"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type TextBox}">
-                        <Grid>
-                            <TextBox Padding="4,6" Text="{Binding Path=Text, RelativeSource={RelativeSource TemplatedParent},
+            <Style x:Key="placeHolderSearchBox" TargetType="{x:Type TextBox}">
+                <Setter Property="SnapsToDevicePixels" Value="True"/>
+                <Setter Property="OverridesDefaultStyle" Value="True"/>
+                <Setter Property="Width" Value="500"/>
+                <Setter Property="Height" Value="30"/>
+                <Setter Property="BorderBrush" Value="#000"/>
+                <Setter Property="FontFamily" Value="Roboto"/>
+                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="Background" Value="#ffffff"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type TextBox}">
+                            <Grid>
+                                <TextBox Padding="4,6" Text="{Binding Path=Text, RelativeSource={RelativeSource TemplatedParent},
                                 Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                      x:Name="TextSource"
                                      Background="Transparent" Panel.ZIndex="2"/>
 
-                            <TextBox Text="{TemplateBinding Tag}" Background="{TemplateBinding Background}"
+                                <TextBox Text="{TemplateBinding Tag}" Background="{TemplateBinding Background}"
                                      Panel.ZIndex="1" Padding="6,4">
-                                <TextBox.Style>
-                                    <Style TargetType="{x:Type TextBox}">
-                                        <Setter Property="Foreground" Value="Transparent"/>
-                                        <Style.Triggers>
-                                            <DataTrigger Binding="{Binding Path=Text, Source={x:Reference TextSource}}" Value="">
-                                                <Setter Property="Foreground" Value="#3a3c40"/>
-                                                <Setter Property="FontFamily" Value="Roboto Italic"/>
-                                                <Setter Property="HorizontalContentAlignment" Value="Left"/>
-                                                <Setter Property="VerticalContentAlignment" Value="Center"/>
-                                            </DataTrigger>
-                                        </Style.Triggers>
+                                    <TextBox.Style>
+                                        <Style TargetType="{x:Type TextBox}">
+                                            <Setter Property="Foreground" Value="Transparent"/>
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding Path=Text, Source={x:Reference TextSource}}" Value="">
+                                                    <Setter Property="Foreground" Value="#3a3c40"/>
+                                                    <Setter Property="FontFamily" Value="Roboto Italic"/>
+                                                    <Setter Property="HorizontalContentAlignment" Value="Left"/>
+                                                    <Setter Property="VerticalContentAlignment" Value="Center"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
 
-                                    </Style>
-                                </TextBox.Style>
+                                        </Style>
+                                    </TextBox.Style>
 
-                            </TextBox>
-                        </Grid>
-                    </ControlTemplate>
-                </Setter.Value>
+                                </TextBox>
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
 
-            </Setter>
+                </Setter>
 
-        </Style>
+            </Style>
 
 
-    </Window.Resources>
-    <Grid >
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="763*"/>
-            <ColumnDefinition Width="29*"/>
-        </Grid.ColumnDefinitions>
-        <StackPanel Grid.ColumnSpan="2">
-            <TextBox Tag="Search" Style="{DynamicResource placeHolderSearchBox}" x:Name="text" Margin="146,5"/>
-            <Button Width="30" Height="30" x:Name="searchBtn" Click="searchBtn_Click" RenderTransformOrigin="3.6,0.6" HorizontalAlignment="Right" VerticalAlignment="Top">
-                <Image Source="https://img.icons8.com/android/24/000000/search.png"/>
+        </Window.Resources>
+    
+        <Grid >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="763*"/>
+                <ColumnDefinition Width="29*"/>
+            </Grid.ColumnDefinitions>
+        
+            <StackPanel Grid.ColumnSpan="2">
+            
+                <TextBox Tag="Search" Style="{DynamicResource placeHolderSearchBox}" x:Name="text" Margin="146,5"/>
+            <Button Width="35" Height="35" x:Name="randomBtn" Click="randomBtn_Click" RenderTransformOrigin="3.6,0.6" HorizontalAlignment="Right" VerticalAlignment="Top" BorderThickness="0"  
+    Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}">
+                <Image Source="https://cdn1.iconfinder.com/data/icons/materia-arrows-symbols-vol-4/24/018_085_arrow_infinity_cycle_random_flow-512.png"/>
+            </Button>
+            <Button Width="35" Height="35" x:Name="searchBtn" Click="searchBtn_Click" RenderTransformOrigin="3.6,0.6" HorizontalAlignment="Right" VerticalAlignment="Top" BorderThickness="0"  
+    Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}">
+      
+                <Image Source="https://img.icons8.com/cotton/2x/search--v2.png"/>
             </Button>
         </StackPanel>
-        <Grid Margin="10,40,10,10" >
-            <ListBox x:Name="ListBox1" Background="Transparent" >
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation="Vertical">
-                        <Image Source="{Binding imagePath}" Width="200" Height="200"></Image>
-                            
-                        </StackPanel>
+        
+            <Grid Margin="10,40,10,10" >
+                <ListBox x:Name="ListBox1" Background="Transparent" >
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                       
+                            <StackPanel Orientation="Vertical">
+                                <Image Source="{Binding imagePath}" Width="300" Height="300" ></Image>
+                            </StackPanel>
+                        
                     </DataTemplate>
-                </ListBox.ItemTemplate>
-                <ListBox.ItemsPanel>
-                    <ItemsPanelTemplate >
-                        <UniformGrid Margin="0" IsItemsHost="True"></UniformGrid>
-                    </ItemsPanelTemplate>
-                </ListBox.ItemsPanel>
-            </ListBox>
-            
-        </Grid>
+                    </ListBox.ItemTemplate>
+                    <ListBox.ItemsPanel>
+                        <ItemsPanelTemplate >
+                            <UniformGrid Margin="0" IsItemsHost="True" ></UniformGrid>
+                        </ItemsPanelTemplate>
+                    </ListBox.ItemsPanel>
+                </ListBox>
+
+            </Grid>
+        
     </Grid>
+    
 </Window>
